Fixed skill title and qualification data on small device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1010,6 +1010,14 @@ img {
   .home__blob {
     width: 180px;
   }
+
+  .skills__title {
+    font-size: var(--normal-font-size);
+  }
+
+  .qualification__data {
+    gap: 0.5rem;
+  }
 }
 /* For medium devices */
 
